--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
 <div class="imagen-texto">
-    <img src="img/indycar.png" alt="" >
+    <img src="img/indycar.png" alt="" width="300" >
     <div class="texto-derecha">
       <h3>Título</h3>
       <p>noticia</p>
